# MNN-LaneNet

./: CMakeLists.txt  README.md  lane_detect.cpp
source/lanenet/: lanenet_model.cpp  lanenet_model.h
